--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&family=Manrope:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- Estilos Globales -->
-    <link rel="stylesheet" href="/_assets/css/global.css">
+    <link rel="stylesheet" href="/_assets/_css/global.css">
 
     <script>
         (function() {
