--- a/_pages/en/Auspiciantes.html
+++ b/_pages/en/Auspiciantes.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <custom-header data-lang="en">
-        <div class="container sponsors-container">
+      <div class="container sponsors-container pt-5 mt-5">  <!-- Agregadas las clases pt-5 mt-5 -->
+
             <div class="section text-center">
                 <h2>Sponsors</h2>
                 <p class="text-muted">
@@ -71,5 +72,6 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/_assets/_css/global.css">
+
 </body>
 </html>
