--- a/_pages/en/Conducta.html
+++ b/_pages/en/Conducta.html
@@ -65,10 +65,11 @@
 
 /* Main container */
 .conduct-container {
-    max-width: 800px;
-    margin: auto;
-    padding: 40px 20px;
+  max-width: 800px;
+  margin: auto;
+  padding: 120px 20px 40px; /* Aumentado el padding superior */
 }
+
 
 /* Intro section */
 .intro-section {
