--- a/_pages/es/RedesSociales.html
+++ b/_pages/es/RedesSociales.html
@@ -30,8 +30,12 @@
                         <span>Instagram</span>
                     </a>
                     <a href="https://www.linkedin.com/company/bayes-plurinacional/" class="social-link linkedin" target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                        <span>LinkedIn</span>
+                      <i class="fab fa-linkedin"></i>
+                      <span>LinkedIn</span>
+                    </a>
+                    <a href="https://www.youtube.com/@BayesPlurinacional" class="social-link youtube" target="_blank">
+                      <i class="fab fa-youtube"></i>
+                      <span>YouTube</span>
                     </a>
                     <a href="https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc" class="social-link whatsapp" target="_blank">
                         <i class="fab fa-whatsapp"></i>
