--- a/_pages/en/RedesSociales.html
+++ b/_pages/en/RedesSociales.html
@@ -12,8 +12,8 @@
     <custom-header data-lang="en">
         <div class="content-wrapper">
             <div class="container text-center">
-                <h1 class="mb-4" style="text-align: center;"">Social Media</h1>
-                <p class="lead text-muted" style="text-align: center;"">Stay connected with Bayes Plurinacional through our official social media channels.</p>
+                <h1 class="mb-4" style="text-align: center;"">Follow Us on Social Media</h1>
+                <p class="lead text-muted" style="text-align: center;>Stay connected with Bayes Plurinacional through our official social media channels.</p>
 
                 <!-- Redes Sociales -->
                 <div class="social-icons-container">
@@ -37,8 +37,12 @@
                         <i class="fab fa-whatsapp"></i>
                         <span>WhatsApp</span>
                     </a>
+                    <a href="https://www.youtube.com/@BayesPlurinacional" class="social-link youtube" target="_blank">
+                      <i class="fab fa-youtube"></i>
+                      <span>YouTube</span>
+                    </a>
                 </div>
-            
+
                 <!-- Grupo de Contacto -->
                 <div class="contact-section">
                     <h3>Contact Us</h3>
