--- a/_pages/en/Auspiciantes.html
+++ b/_pages/en/Auspiciantes.html
@@ -63,7 +63,7 @@
 
             <div class="contact text-center">
                 <h5>Interested in sponsoring?</h5>
-                <p>Contact us at <a href="mailto:bayesplurinacional@gmail.com">bayesplurinacional@gmail.com</a></p>
+                <p>Contact us at <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
             </div>
 
          
