--- a/_pages/en/Conducta.html
+++ b/_pages/en/Conducta.html
@@ -48,7 +48,7 @@
       <div class="contact-section">
         <h2>Contact</h2>
         <p>For any inquiries, feel free to reach out to us:</p>
-        <a href="mailto:bayesplurinacional@gmail.com" class="contact-email">bayesplurinacional@gmail.com</a>
+        <a href="mailto:admin@bayesplural.org" class="contact-email">admin@bayesplural.org</a>
       </div>
 
       <div class="license-section">
