--- a/_pages/es/Auspiciantes.html
+++ b/_pages/es/Auspiciantes.html
@@ -62,7 +62,7 @@
 
             <div class="contact text-center">
                 <h5>¿Interesado en patrocinar?</h5>
-                <p>Contáctanos en <a href="mailto:bayesplurinacional@gmail.com">bayesplurinacional@gmail.com</a></p>
+                <p>Contáctanos en <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
             </div>
         </div>
     </custom-header>
