Recupero los logos, y actualizo el INDEX principal

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100">
     <div class="text-center">
-        <h1 class="mb-4">Bienvenido a Bayes Plurinacional</h1>
-        <p>Selecciona tu idioma:</p>
+        <img src="/_assets/_img/logos/BP.svg" alt="Logo" width="650">
         <div class="btn-container mt-3">
             <button class="btn btn-primary btn-lg me-3" onclick="redirectTo('es')">🌎 Español</button>
             <button class="btn btn-danger btn-lg" onclick="redirectTo('en')">🌍 English</button>
