--- a/_pages/es/Conducta.html
+++ b/_pages/es/Conducta.html
@@ -11,37 +11,40 @@
   <custom-header data-lang="es">
     <div class="container conduct-container">
       <h1 class="text-center">Código de Conducta</h1>
-      <p class="text-center lead"><strong>El primer derecho es formar parte de una comunidad.</strong></p>
-      
-      <div class="intro-section">
+      <h3 class="text-center lead"><strong>El primer derecho es formar parte de una comunidad.</strong></h3>
+        <br>
         <p>
-          Los códigos de conducta suelen asemejarse al Artículo 12 de la Constitución Nacional de Colombia:
-          <blockquote>"Nadie será sometido a desaparición forzada, a torturas ni a tratos o penas crueles, inhumanas o degradantes."</blockquote>
-          Cuando el pueblo originario Wayúu tradujo este artículo, escribió: 
-          <em>"Nadie podrá llevar por encima de su corazón a nadie ni hacerle mal en su persona, aunque piense y diga diferente."</em>
+          Los códigos de conducta se suelen parecer al Artículo 12 de la Constitución Nacional de Colombia:
+          <div class="intro-section">
+          "Nadie será sometido a desaparición forzada, a torturas ni a tratos o penas crueles, inhumanas o degradantes"
+          </div>
+          Cuando el pueblo originario Wayúu, que vivió 500 años de colonialismo en Colombia, tuvo que traducir este artículo escribió:
+          <div class="intro-section">
+          "Nadie podrá llevar por encima de su corazón a nadie ni hacerle mal en su persona, aunque piense y diga diferente"
+          </div>
         </p>
         <p>
-          El evento Bayes Plurinacional busca fomentar un ambiente de respeto, colaboración y convivencia pacífica. 
-          En las comunidades, los conflictos se resuelven mediante gestos, intercambios y ayuda mutua.
+          La experiencia acumulada por las comunidades más diversas del mundo ha llevado, de manera independiente, a una obligación universal de dar y recibir, y al desarrollo de tecnologías de reciprocidad que reactivan los vínculos a través de ritos de intercambio (festivos o coercitivos). El evento Bayes Plurinacional en sí mismo es un rito festivo que tiene por objetivo crear y recrear nuestros vínculos.
+          Cuando surgen conflictos, las comunidades los resuelven activando las tres clases de relaciones posibles: (->) los gestos, actos u obsequios que la parte causante ofrece a la afectada; (<- ->) el intercambio mutuo entre las partes, que renueva el ciclo de intercambios; (<-) y la ayuda que la parte afectada ofrece a la causante para modificar los comportamientos que dieron origen al conflicto.
         </p>
-      </div>
+
 
       <div class="principles-section">
         <h2 class="text-center">Principios del Buen Vivir (Aymara)</h2>
         <ul class="principles-list">
-          <li><strong>Suma Manq'aña:</strong> Saber comer; somos lo que comemos.</li>
-          <li><strong>Suma Umaña:</strong> Saber beber; el agua es la fuente de toda vida.</li>
-          <li><strong>Suma Thokoña:</strong> Saber danzar; actuar con dimensión espiritual.</li>
-          <li><strong>Suma Ikiña:</strong> Saber dormir; descansar para renovar energías.</li>
-          <li><strong>Suma Irnakaña:</strong> Saber trabajar; el trabajo comunitario es alegría.</li>
-          <li><strong>Suma Lupiña:</strong> Saber meditar; el silencio personal restablece el ambiente.</li>
-          <li><strong>Suma Amuyaña:</strong> Saber pensar; caminar la senda del corazón.</li>
-          <li><strong>Suma Munaña Munayasiña:</strong> Saber amar y ser amado.</li>
-          <li><strong>Suma Ist'aña:</strong> Saber escuchar; percibir con todo el cuerpo.</li>
-          <li><strong>Suma Aruskipaña:</strong> Saber hablar; las palabras dejan huella en los corazones.</li>
-          <li><strong>Suma Samkasiña:</strong> Saber soñar; los sueños son el inicio de la realidad.</li>
-          <li><strong>Suma Sarnaqaña:</strong> Saber caminar; nadie camina solo.</li>
-          <li><strong>Suma Churaña, Suma Katukaña:</strong> Saber dar y recibir con gratitud.</li>
+          <li>1. <strong>Suma Umaña:</strong> Saber beber. El agua es la fuente de toda forma de vida.</li>
+          <li>2. <strong>Suma Manq'aña:</strong> Saber comer. Nuestro alimento es la vida de otros seres.</li>
+          <li>3. <strong>Suma Thokoña:</strong> Saber bailar. El cuerpo nos conecta con el cosmos.</li>
+          <li>4. <strong>Suma Ikiña:</strong> Saber dormir. Antes de la media noche, para recuperar la energía de dos días.</li>
+          <li>5. <strong>Suma Irnakaña:</strong> Saber trabajar. Nuestra acción cumple un rol en la comunidad.</li>
+          <li>6. <strong>Suma Lupiña:</strong> Saber meditar. El silencio restablece los equilibrios.</li>
+          <li>7. <strong>Suma Amuyaña:</strong>Saber pensar. Sin perder la razón, caminamos la senda del corazón.</li>
+          <li>8. <strong>Suma Munaña Munayasiña:</strong> Saber amar y ser amado. Coexistir a través de la complementariedad.</li>
+          <li>9. <strong>Suma Ist'aña:</strong> Saber escuchar. Percibir incluso aquello que no habla ni se muestra.</li>
+          <li>10. <strong>Suma Aruskipaña:</strong> Saber hablar. Nuestras acciones se escriben en otros corazones.</li>
+          <li>11. <strong>Suma Samkasiña:</strong> Saber soñar. Soñar es la semilla de la nueva realidad.</li>
+          <li>12. <strong>Suma Sarnaqaña:</strong> Saber caminar. No existe el cansancio para quien sabe caminar.</li>
+          <li>13. <strong>Suma Churaña, Suma Katukaña:</strong> Saber dar y saber recibir con dicha y agradecimiento porque la vida es la unión de muchos seres y fuerzas.</li>
         </ul>
       </div>
 
