--- a/_pages/en/Conducta.html
+++ b/_pages/en/Conducta.html
@@ -11,54 +11,56 @@
   <custom-header data-lang="en">
     <div class="container conduct-container">
       <h1 class="text-center">Code of Conduct</h1>
-      <p class="text-center lead"><strong>The first right is to be part of a community.</strong></p>
-      
-      <div class="intro-section">
-        <p>
-          Codes of conduct are often similar to Article 12 of the Colombian National Constitution:
-          <blockquote>"No one shall be subjected to enforced disappearance, torture, or cruel, inhuman, or degrading treatment or punishment."</blockquote>
-          When the indigenous Wayúu people translated this article, they wrote: 
-          <em>"No one may place themselves above another’s heart or harm another person, even if they think and speak differently."</em>
-        </p>
-        <p>
-          The Bayes Plurinacional event aims to foster an environment of respect, collaboration, and peaceful coexistence. 
-          In our communities, conflicts are resolved through gestures, exchanges, and mutual assistance.
-        </p>
-      </div>
+      <h3 class="text-center lead"><strong>The first right is to be part of a community.</strong></h3>
+      <br>
+      <p>
+        Codes of conduct often resemble Article 12 of the National Constitution of Colombia:
+        <div class="intro-section">
+        "No one shall be subjected to enforced disappearance, torture, or cruel, inhuman, or degrading treatment or punishment."
+        </div>
+        When the Wayúu indigenous people, who endured 500 years of colonialism in Colombia, had to translate this article, they wrote:
+        <div class="intro-section">
+        "No one shall carry another above their heart or harm them in their person, even if they think and speak differently."
+        </div>
+      </p>
+      <p>
+        The accumulated experience of the world's most diverse communities has independently led to a universal obligation to give and receive, and the development of reciprocity technologies that reactivate bonds through exchange rituals (festive or coercive). The Bayes Plurinational event itself is a festive ritual aimed at creating and recreating our bonds.
+        When conflicts arise, communities resolve them by activating the three possible types of relationships: (->) gestures, acts, or gifts that the causing party offers to the affected party; (<- ->) mutual exchange between both parties, renewing the cycle of exchanges; (<-) and assistance that the affected party offers to the causing party to modify the behaviors that led to the conflict.
+      </p>
 
       <div class="principles-section">
         <h2 class="text-center">Principles of Good Living (Aymara)</h2>
         <ul class="principles-list">
-          <li><strong>Suma Manq'aña:</strong> Knowing how to eat; we are what we eat.</li>
-          <li><strong>Suma Umaña:</strong> Knowing how to drink; water is the source of all life.</li>
-          <li><strong>Suma Thokoña:</strong> Knowing how to dance; act with spiritual awareness.</li>
-          <li><strong>Suma Ikiña:</strong> Knowing how to sleep; rest to restore energy.</li>
-          <li><strong>Suma Irnakaña:</strong> Knowing how to work; communal work is a joy.</li>
-          <li><strong>Suma Lupiña:</strong> Knowing how to meditate; personal silence restores harmony.</li>
-          <li><strong>Suma Amuyaña:</strong> Knowing how to think; follow the path of the heart.</li>
-          <li><strong>Suma Munaña Munayasiña:</strong> Knowing how to love and be loved.</li>
-          <li><strong>Suma Ist'aña:</strong> Knowing how to listen; perceive with the whole body.</li>
-          <li><strong>Suma Aruskipaña:</strong> Knowing how to speak; words leave marks on hearts.</li>
-          <li><strong>Suma Samkasiña:</strong> Knowing how to dream; dreams are the beginning of reality.</li>
-          <li><strong>Suma Sarnaqaña:</strong> Knowing how to walk; no one walks alone.</li>
-          <li><strong>Suma Churaña, Suma Katukaña:</strong> Knowing how to give and receive with gratitude.</li>
+          <li>1. <strong>Suma Umaña:</strong> Knowing how to drink. Water is the source of all life.</li>
+          <li>2. <strong>Suma Manq'aña:</strong> Knowing how to eat. Our food is the life of other beings.</li>
+          <li>3. <strong>Suma Thokoña:</strong> Knowing how to dance. The body connects us with the cosmos.</li>
+          <li>4. <strong>Suma Ikiña:</strong> Knowing how to sleep. Before midnight, to recover the energy of two days.</li>
+          <li>5. <strong>Suma Irnakaña:</strong> Knowing how to work. Our actions fulfill a role in the community.</li>
+          <li>6. <strong>Suma Lupiña:</strong> Knowing how to meditate. Silence restores balance.</li>
+          <li>7. <strong>Suma Amuyaña:</strong> Knowing how to think. Without losing reason, we walk the path of the heart.</li>
+          <li>8. <strong>Suma Munaña Munayasiña:</strong> Knowing how to love and be loved. Coexisting through complementarity.</li>
+          <li>9. <strong>Suma Ist'aña:</strong> Knowing how to listen. Perceiving even that which does not speak or reveal itself.</li>
+          <li>10. <strong>Suma Aruskipaña:</strong> Knowing how to speak. Our actions are written in the hearts of others.</li>
+          <li>11. <strong>Suma Samkasiña:</strong> Knowing how to dream. Dreaming is the seed of a new reality.</li>
+          <li>12. <strong>Suma Sarnaqaña:</strong> Knowing how to walk. Fatigue does not exist for those who know how to walk.</li>
+          <li>13. <strong>Suma Churaña, Suma Katukaña:</strong> Knowing how to give and knowing how to receive with joy and gratitude because life is the union of many beings and forces.</li>
         </ul>
       </div>
 
       <div class="contact-section">
         <h2>Contact</h2>
-        <p>For any inquiries, feel free to reach out to us:</p>
+        <p>For any inquiries, write to us at:</p>
         <a href="mailto:admin@bayesplural.org" class="contact-email">admin@bayesplural.org</a>
       </div>
 
       <div class="license-section">
         <h2>License</h2>
         <p>
-          This Code of Conduct has been adapted from the indigenous worldviews of Abya Yala 
-          and is distributed under a <strong>Creative Commons Zero</strong> license.
+          This Code of Conduct has been adapted from the indigenous cosmovisions of Abya Yala
+          and is distributed under the <strong>Creative Commons Zero</strong> license.
         </p>
       </div>
-    </div>
+
   </custom-header>
 </body>
 <style>
