--- a/_pages/es/RedesSociales.html
+++ b/_pages/es/RedesSociales.html
@@ -12,12 +12,12 @@
     <custom-header data-lang="es">
         <div class="content-wrapper">
             <div class="container text-center">
-                <h1 class="mb-4" style="text-align: center;">Síguenos en Redes Sociales</h1>
+                <h1 class="mb-4" style="text-align: center;">Redes Sociales</h1>
                 <p class="lead text-muted" style="text-align: center;">Mantente conectado con Bayes Plurinacional a través de nuestras redes oficiales.</p>
 
                 <!-- Redes Sociales -->
                 <div class="social-icons-container">
-                    <a href="mailto:admin@bayesplural.org" class="social-link email" target="_blank">
+                    <a href="https://groups.google.com/g/bayes-plurinacional" class="social-link email" target="_blank">
                         <i class="fas fa-envelope"></i>
                         <span>Email</span>
                     </a>
@@ -30,12 +30,8 @@
                         <span>Instagram</span>
                     </a>
                     <a href="https://www.linkedin.com/company/bayes-plurinacional/" class="social-link linkedin" target="_blank">
-                      <i class="fab fa-linkedin"></i>
-                      <span>LinkedIn</span>
-                    </a>
-                    <a href="https://www.youtube.com/@BayesPlurinacional" class="social-link youtube" target="_blank">
-                      <i class="fab fa-youtube"></i>
-                      <span>YouTube</span>
+                        <i class="fab fa-linkedin"></i>
+                        <span>LinkedIn</span>
                     </a>
                     <a href="https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc" class="social-link whatsapp" target="_blank">
                         <i class="fab fa-whatsapp"></i>
@@ -48,7 +44,7 @@
                     <h3>Contáctanos</h3>
                     <p class="text-muted">Para más información, no dudes en escribirnos.</p>
                     <p><i class="fas fa-envelope"></i> Email: <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
-                    <p><i class="fas fa-users"></i> Grupo de correos: <a href="https://groups.google.com/g/bayes-plurinacional" target="_blank">Google Groups</a></p>
+                    <!--<p><i class="fas fa-users"></i> Grupo de correos: <a href="https://groups.google.com/g/bayes-plurinacional" target="_blank">Google Groups</a></p>-->
                 </div>
             </div>
         </div>
