--- a/_pages/en/Plural.html
+++ b/_pages/en/Plural.html
@@ -45,13 +45,13 @@
           Formal sciences achieve this by deriving theorems within closed axiomatic systems without uncertainty.
           Empirical sciences based on data, however, must validate their propositions within open natural systems that contain regions hidden from our perception.
           Is it possible to reach truths (intersubjective agreements) in contexts of uncertainty? 
-          At the very least, we know the meaning of not lying (at least to oneself): not asserting or affirming more than what is known, without concealing what is known.
+          At the very least, we know the meaning of not lying (at least to oneself): not asserting or affirming more than what is known, while not concealing anything that is known.
           Mathematically, this is defined as maximizing uncertainty (or entropy) given the available information (or constraints), a principle known as MaxEnt [1].
           
           <br><br>
           
-          Distributions that adhere to the principle of not lying have the property of intuitively aligning our individual subjectivities.
-          For example, if we know that a gift is hidden behind one of three identical boxes, we will naturally avoid assigning all our belief to just one of them (since we lack absolute certainty of the gift's location) and will also avoid assigning greater belief to one box over the others (since we have no information to prefer one over another).
+          Distributions adhering to the principle of not lying possess the property of intuitively aligning our individual subjectivities.
+          For example, if we know there is a hidden gift behind one of three identical boxes, we naturally avoid assigning all our belief to a single box (since we lack absolute certainty about the gift’s location) and also avoid assigning greater belief to one box over the others (as we have no information to prefer one over another).
           Intuitively, all individuals, regardless of culture or ideology, ultimately acknowledge that the only possible belief distribution given the available information is the one that equally divides belief among the three boxes (maximizing uncertainty) without assigning belief outside of them (given the available information).
 
           <br><br>
@@ -64,12 +64,12 @@
 
           <br><br>
 
-          The multiplicative nature of hypothesis evaluation and life form selection processes is responsible for learning [2], both in probability and evolution.
           In probability, hypotheses are evaluated through a sequence of predictions, where initial belief is filtered through surprise, the only source of information.
           A hypothesis that predicts with 1 (zero surprise) preserves all prior belief.
           A hypothesis that predicts with 0 (total surprise) becomes permanently false.
           Similarly, evolving life forms develop through sequences of survival and reproduction rates.
           A single zero in the sequence leads to the extinction of the life form.
+          The multiplicative nature of hypothesis evaluation and life form selection processes is responsible for learning [2], both in probability and evolution.
           Not coincidentally, the standard model of evolution (replicator dynamic [3]) is structurally equivalent to Bayes' theorem [4].
 
           <br><br>
