--- a/_pages/en/RedesSociales.html
+++ b/_pages/en/RedesSociales.html
@@ -12,10 +12,10 @@
     <custom-header data-lang="en">
         <div class="content-wrapper">
             <div class="container text-center">
-                <h1 class="mb-4" style="text-align: center;"">Follow Us on Social Media</h1>
-                <p class="lead text-muted" style="text-align: center;>Stay connected with Bayes Plurinacional through our official social media channels.</p>
+                <h1 class="mb-4" style="text-align: center;">Social Networks</h1>
+                <p class="lead text-muted" style="text-align: center;">Stay connected with Plurinational Bayes through our official networks.</p>
 
-                <!-- Redes Sociales -->
+                <!-- Social Networks -->
                 <div class="social-icons-container">
                     <a href="https://groups.google.com/g/bayes-plurinacional" class="social-link email" target="_blank">
                         <i class="fas fa-envelope"></i>
@@ -30,25 +30,25 @@
                         <span>Instagram</span>
                     </a>
                     <a href="https://www.linkedin.com/company/bayes-plurinacional/" class="social-link linkedin" target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                        <span>LinkedIn</span>
-                    </a>
-                    <a href="https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc" class="social-link whatsapp" target="_blank">
-                        <i class="fab fa-whatsapp"></i>
-                        <span>WhatsApp</span>
+                      <i class="fab fa-linkedin"></i>
+                      <span>LinkedIn</span>
                     </a>
                     <a href="https://www.youtube.com/@BayesPlurinacional" class="social-link youtube" target="_blank">
                       <i class="fab fa-youtube"></i>
                       <span>YouTube</span>
                     </a>
+                    <a href="https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc" class="social-link whatsapp" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                        <span>WhatsApp</span>
+                    </a>
                 </div>
 
                 <!-- Grupo de Contacto -->
                 <div class="contact-section">
-                    <h3>Contact Us</h3>
-                    <p class="text-muted">For more information, feel free to reach out to us.</p>
+                    <h3>Contact us</h3>
+                    <p class="text-muted">For more information, do not hesitate to contact us at.</p>
                     <p><i class="fas fa-envelope"></i> Email: <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
-                    <p><i class="fas fa-users"></i> Mailing Group: <a href="https://groups.google.com/g/bayes-plurinacional" target="_blank">Google Groups</a></p>
+                    <!--<p><i class="fas fa-users"></i> Grupo de correos: <a href="https://groups.google.com/g/bayes-plurinacional" target="_blank">Google Groups</a></p>-->
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     align-items: center;
 }
 
-/* Redes Sociales */
+/* Social Networks */
 .social-icons-container {
     display: flex;
     flex-wrap: wrap;
@@ -97,11 +97,12 @@
 }
 
 /* Colores por red social */
-.email { background: #D13438; }
+.email { background: #555555; }
 .twitter { background: #1DA1F2; }
 .instagram { background: linear-gradient(45deg, #F58529, #DD2A7B, #8134AF); }
 .linkedin { background: #0A66C2; }
-.whatsapp { background: #25D366; }
+.whatsapp { background: #1C9F4D; }
+.youtube { background: #FF0000; }
 
 /* Efecto Hover */
 .social-link:hover {
