--- a/_pages/es/Plural.html
+++ b/_pages/es/Plural.html
@@ -64,12 +64,12 @@
 
           <br><br>
 
-          La naturaleza multiplicativa de los procesos de evaluación de hipótesis y de selección de formas de vida es la responsable del aprendizaje [2], tanto en probabilidad como en evolución.
           En probabilidad las hipótesis se evalúan siguiendo una secuencia de predicciones, donde la creencia inicial es filtrada mediante la sorpresa, única fuente de información.
           La hipótesis que predice con 1 (sorpresa nula), preserva toda la creencia previa.
           La hipótesis que predice con 0 (sorpresa total), se hace falsa para siempre.
-          De modo similar, las formas de vida en evolución se desarrollan siguiendo una secuencias de tasas de supervivencia y reproducción.
+          De modo similar, las formas de vida en evolución se desarrollan siguiendo una secuencia de tasas de supervivencia y reproducción.
           Con que haya un único cero en la secuencia, la forma de vida se extingue para siempre.
+          La naturaleza multiplicativa de los procesos de evaluación de hipótesis y de selección de formas de vida es la responsable del aprendizaje [2], tanto en probabilidad como en evolución.
           No casualmente el modelo estándar de evolución (<em>replicator dynamic</em> [3]) es estructuralmente equivalente al teorema de Bayes [4].
 
           <br><br>
@@ -81,29 +81,29 @@
           <br><br>
 
           La ventaja de la pluralidad no es teórica sino práctica.
-          Cuando en estos sistemas se produce una ruptura de la pluralidad se aparecen efectos negativos evidentes.
+          Cuando en estos sistemas se produce una ruptura de la pluralidad aparecen efectos negativos evidentes.
           En probabilidad, la selección arbitraria de una única hipótesis del espacio produce como consecuencia lo que se conoce como <em>overfitting</em> [7].
           En evolución la falta de diversidad genética tiene consecuencias negativas conocidas como <em>inbreeding depression</em>.
-          En la historia del ser humano, la masiva pérdida de la diversidad cultural provocada durante la colonial-modernidad por la imposición de un único tipo de sociedad está producido consecuencias ambientales cada vez más evidentes [8].    
+          En la historia del ser humano, la masiva pérdida de la diversidad cultural provocada durante la colonial-modernidad por la imposición de un único tipo de sociedad está produciendo consecuencias ambientales cada vez más evidentes [8].
           A pesar de todos los avances, la ciencia metropolitana sigue siendo incapaz de compensar la pérdida de los conocimientos milenarios y la crisis ecológica actual no deja de profundizarse [9].
 
           <br><br>
 
           Si bien en todo este tiempo no se ha propuesto un sistema de razonamiento para contextos de incertidumbre mejor en términos prácticos, la aplicación estricta de las reglas de la probabilidad (o enfoque bayesiano) se ha visto limitada históricamente debido al costo computacional que se requiere para la evaluación de todo el espacio de hipótesis.
           Si bien hasta finales del siglo 19 se resolvieron una gran cantidad de modelos de forma completa, especialmente en física estadística, durante el siglo 20 comienzan a proponerse criterios que, para evitar el costo computacional, seleccionan arbitrariamente una única hipótesis del espacio.
-          Hubo que esperar hasta las vísperas del siglo 21 para que comenzara a ser posible, de forma general, computar las distribuciones de creencias óptimas dada la información disponible en todos los campos de las ciencia.
+          Hubo que esperar hasta las vísperas del siglo 21 para que comenzara a ser posible, de forma general, computar las distribuciones de creencias óptimas dada la información disponible en todos los campos de las ciencias.
           
           <br><br>
           
           Los argumentos causales que se corresponden con la realidad causal subyacente necesariamente son las hipótesis de nivel superior (teorías) que producen la menor cantidad de sorpresa, y ningún modelo de inteligencia artificial, por más complejo que sea, puede mejorar su desempeño.
-          Sin embargo, no siempre somos capaces de formular esos argumentos causales y a veces no somos capaces de (aproximar) la aplicación estricta de las reglas de la probabilidad para evaluarlos correctamente.
+          Sin embargo, no siempre somos capaces de formular esos argumentos causales y a veces no somos capaces de aproximar la aplicación estricta de las reglas de la probabilidad para evaluarlos correctamente.
           A pesar de que las redes neuronales profundas son entrenadas seleccionando un único parámetro del espacio de parámetros posibles, recientemente se ha logrado compensar las consecuencias negativas (overfitting) a través de un tipo de pluralidad similar a la empleada por la vida en la evolución, basada en la coexistencia de una enorme cantidad de unidades individuales (neuronas), produciendo la emergencia de una verdadera inteligencia artificial (<em>double descent</em>) [12].
 
           <br><br>
 
           Así como toda inteligencia emerge de la pluralidad, las sociedades se adaptan a la vida mediante la coexistencia sus diversidades locales.
           La experiencia acumulada por las comunidades más diversas del mundo ha llevado, de manera independiente, a una obligación universal de dar y recibir, y al desarrollo de tecnologías de reciprocidad que reactivan los vínculos comunitarios a través de ritos de intercambio (festivos o coercitivos).
-          Las instituciones humanas caṕaces de administrar los bienes comunes son de tipo comunitario, en las que los ciclos de intercambio con los sistemas ecológicos son regulados localmente de forma directa [13, 14].
+          Las instituciones humanas capaces de administrar los bienes comunes son de tipo comunitario, en las que los ciclos de intercambio con los sistemas ecológicos son regulados localmente de forma directa [13, 14].
           Por estas razones, nuestro objetivo es promover la Inteligencia Plural en los pueblos del Sur Global.</b>
 
           <br><br>
