--- a/_pages/es/RedesSociales.html
+++ b/_pages/es/RedesSociales.html
@@ -97,11 +97,12 @@
 }
 
 /* Colores por red social */
-.email { background: #D13438; }
+.email { background: #555555; }
 .twitter { background: #1DA1F2; }
 .instagram { background: linear-gradient(45deg, #F58529, #DD2A7B, #8134AF); }
 .linkedin { background: #0A66C2; }
-.whatsapp { background: #25D366; }
+.whatsapp { background: #1C9F4D; }
+.youtube { background: #FF0000; }
 
 /* Efecto Hover */
 .social-link:hover {
