--- a/en/Auspiciantes.html
+++ b/en/Auspiciantes.html
@@ -83,6 +83,11 @@
             <hr>
 
             <h4>🥈 Silver Level</h4>
+            <img src="/logos/laSalle.png" alt="Logo" class="img-fluid" style="max-width: 400px; width: 100%;">
+            <img src="/logos/uSabana.png" alt="Logo" class="img-fluid" style="max-width: 400px; width: 100%;">
+
+            <br>
+
             <img src="/logos/datascination.png" alt="Logo" width="200">
             
             <hr>
