--- a/en/Conducta.html
+++ b/en/Conducta.html
@@ -50,7 +50,7 @@
       <div class="contact-section">
         <h2>Contact</h2>
         <p>For any inquiries, write to us at:</p>
-        <a href="mailto:admin@bayesplural.org" class="contact-email">admin@bayesplural.org</a>
+        <a href="mailto:bayesplurinacional@gmail.com" class="contact-email">bayesplurinacional@gmail.com</a>
       </div>
 
       <div class="license-section">
