--- a/en/Auspiciantes.html
+++ b/en/Auspiciantes.html
@@ -64,7 +64,7 @@
             <section class="container text-center alert alert-warning">
           
                 <h5>Interested in sponsoring?</h5>
-                <p>Contact us at <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
+                <p>Contact us at <a href="mailto:bayesplurinacional@gmail.com">bayesplurinacional@gmail.com</a></p>
              
              </section>
             <div class="section text-center">
