--- a/en/RedesSociales.html
+++ b/en/RedesSociales.html
@@ -47,7 +47,7 @@
                 <div class="contact-section">
                     <h3>Contact us</h3>
                     <p class="text-muted">For more information, do not hesitate to contact us at.</p>
-                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
+                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:bayesplurinacional@gmail.com">bayesplurinacional@gmail.com</a></p>
                     <!--<p><i class="fas fa-users"></i> Grupo de correos: <a href="https://groups.google.com/g/bayes-plurinacional" target="_blank">Google Groups</a></p>-->
                 </div>
             </div>
