--- a/es/Auspiciantes.html
+++ b/es/Auspiciantes.html
@@ -64,7 +64,7 @@
             <section class="container text-center alert alert-warning">
           
                <h5>¿Interesado en auspiciar?</h5>
-                <p>Contáctanos en <a href="mailto:admin@bayesplural.org">admin@bayesplural.org</a></p>
+                <p>Contáctanos en <a href="mailto:bayesplurinacional@gmail.com">bayesplurinacional@gmail.com</a></p>
             
             </section>
             <div class="section text-center">
