--- a/es/Conducta.html
+++ b/es/Conducta.html
@@ -51,7 +51,7 @@
       <div class="contact-section">
         <h2>Contacto</h2>
         <p>Para cualquier consulta, escríbenos a:</p>
-        <a href="mailto:admin@bayesplural.org" class="contact-email">admin@bayesplural.org</a>
+        <a href="mailto:bayesplurinacional@gmail.com" class="contact-email">bayesplurinacional@gmail.com</a>
       </div>
 
       <div class="license-section">
