Logos. EIA y Mutt Data

--- a/es/Auspiciantes.html
+++ b/es/Auspiciantes.html
@@ -83,6 +83,7 @@
                 <h4>🥈 Silver Level</h4>
                 <img src="/logos/laSalle.png" alt="Logo" class="img-fluid" style="max-width: 400px; width: 100%;">
                 <img src="/logos/uSabana.png" alt="Logo" class="img-fluid" style="max-width: 400px; width: 100%;">
+                <img src="/logos/EIA.png" alt="Logo" class="img-fluid" style="max-width: 280px; width: 100%;">
 
                 <br>
 
@@ -90,8 +91,10 @@
 
                 <hr>
                 <h4>🎓 Support Level</h4><br>
+                <img src="/logos/mutt.png" alt="Logo" class="img-fluid" style="max-width: 600px; width: 100%;">
                 <img src="/logos/khipuX2.jpg" alt="Logo" class="img-fluid" style="max-width: 400px; width: 100%;">
-                <img src="/logos/quipu.png" alt="Logo" class="img-fluid" style="max-width: 200px; width: 100%;">
+                
+                
           </div>
 
                 <br><br>
