--- a/en/Plural.html
+++ b/en/Plural.html
@@ -35,6 +35,8 @@
       <p class="lead intro-text">
         Optimal beliefs distributions given the available information.<br>
         Intersubjective agreements in contexts of uncertainty.
+        <br><br>
+        Promoting Plural Intelligence among the peoples of the Global South
       </p>
     </section>
 
