--- a/es/Plural.html
+++ b/es/Plural.html
@@ -35,6 +35,10 @@
       <p class="lead intro-text">
         Distribución de creencias óptimas dada la información disponible.<br>
         Acuerdos intersubjetivos en contextos de incertidumbre.
+        <br><br>
+
+        Promoviendo la Inteligencia Plural en los pueblos del Sur Global
+
       </p>
     </section>
 
