7 Salas, de la 0 a la 6

--- a/link/VideoConferencia2.html
+++ b/link/VideoConferencia2.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://meet.google.com/mix-tkcr-fnh">
+<meta http-equiv="refresh" content="0; url=https://meet.google.com/vbd-tbey-ubd">
 <!--meet.google.com/dew-dorc-fqa-->
 <!--https://meet.jit.si/BayesPlurinacional-->
 <!--https://us02web.zoom.us/j/6951169976?pwd=K3l3clBMYnM5RkFHdlZZQ3RjcWs0UT09-->
