--- a/en/index.html
+++ b/en/index.html
@@ -62,12 +62,7 @@
       </section>
       <section class="social-section container py-5 text-center">
       <h3>Explore our YouTube channel</h3>
-      <div class="social-icons-container">
-        <a href="https://www.youtube.com/@BayesPlurinacional" class="social-link youtube" target="_blank">
-          <i class="fab fa-youtube"></i>
-          <span>YouTube</span>
-        </a>
-      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/uT05nZgTqB4?si=UAh0744DEYhwGBZd&amp;start=945" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
       <section class="sponsors-section container py-5">
