GEnte en la portada

--- a/es/index.html
+++ b/es/index.html
@@ -26,6 +26,9 @@
         class="img-fluid"
         style="max-width: 900px; width: 90%"
       />
+      <br /> <br />  
+
+          <img src="/static/2025/workshop-causal.jpg" alt="Logo" class="img-fluid" style="max-width: 1200px; width: 90%;">
       <p style="font-size: 1.55rem">
         <br />
         <b>Inteligencia Plural.</b>
@@ -59,9 +62,8 @@
               <span>Google Group</span>
           </a>
         </div>
-      </section>
-      <section class="social-section container py-5 text-center">
-      <h3>Explora nuestro canal de YouTube</h3>
+      <br/>  
+      <h3>y explora nuestro canal de YouTube</h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uT05nZgTqB4?si=UAh0744DEYhwGBZd&amp;start=945" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
