--- a/en/index.html
+++ b/en/index.html
@@ -64,7 +64,7 @@
           </a>
         </div>
       <h3>and explore our YouTube channel</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/uT05nZgTqB4?si=UAh0744DEYhwGBZd&amp;start=945" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/nD6NEG2MnDc?si=G80EWjchPvD0--RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
       <section class="sponsors-section container py-5">
