Link a full video

--- a/en/index.html
+++ b/en/index.html
@@ -57,6 +57,7 @@
 
       <section class="social-section container py-5 text-center">
       <h3>Join the official community channel</h3>
+      <p>(This video has been edited. Watch the full version <a href="https://www.youtube.com/watch?v=uT05nZgTqB4&t=900s">here</a>)</p>
         <div class="social-icons-container">
           <a href="https://groups.google.com/g/bayes-plurinacional" class="social-link email" target="_blank">
               <i class="fas fa-envelope"></i>
