--- a/es/index.html
+++ b/es/index.html
@@ -64,6 +64,7 @@
         </div>
       <br/>  
       <h3>y explora nuestro canal de YouTube</h3>
+      <p>(El siguiente video fue editado. Para ver la versión completa ir <a href="https://www.youtube.com/watch?v=uT05nZgTqB4&t=900s">aquí</a>)</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/nD6NEG2MnDc?si=G80EWjchPvD0--RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
